--- a/src/index.scss
+++ b/src/index.scss
@@ -4,3 +4,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+button:focus,.button:active {
+  outline: none !important;
+}
