--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-button:focus,.button:active {
+button:focus, button:active {
   outline: none !important;
 }
